# template-python

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
scripts/: install_uv_tools.sh
