[project]
name = "template-python"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
lint = [
    "mypy~=1.18.2",
    "ruff~=0.14.3",
    "mdformat==0.7.21",
    "mdformat-footnote==0.1.1",
    "mdformat-frontmatter==2.0.8",
    "mdformat-gfm==0.4.1",
]

test = [
    "pytest",
] 

[tool.uv]
default-groups = "all"
