[project]
name = "template-python"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit",
]

lint = [
    "ruff",
    "ty",
]

test = [
    "pytest",
    "pytest-cov",
] 

[tool.uv]
default-groups = []

[tool.ruff]
target-version = "py313"

# Set the maximum line length to 88.
line-length = 88

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "C", # flake8-comprehensions / mccabe
    "E", # pycodestyle errors
    "F", # Pyflakes
    "I", # isort
    "W", # pycodestyle warnings
    "D", # pydocstyle
]
ignore = [
    "D100", # Missing docstring in public package
]
extend-select = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src",
    "--cov-report=xml",
    "--verbose",
]

[tool.coverage.run]
branch = true
source = ["src/"]

[tool.coverage.report]
show_missing = true
fail_under = 80
omit = ["tests/*"]

[tool.coverage.html]
directory = "htmlcov"

[tool.markdown.lint]
default = true
MD004 = false    # ul-style - Unordered list style
MD007.indent = 2 # ul-indent - Unordered list indentation
MD013 = false    # line-length - Line length
MD029 = false    # ol-prefix - Ordered list item prefix
MD033 = false    # no-inline-html Inline HTML
MD041 = false    # first-line-heading/first-line-h1
MD046 = false    # indented-code-blocks
MD059 = false    # descriptive-link-text
